--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>ElektropPool</title>
+    <title>ElektroPool</title>
   </head>
-  <body class="bg-dark">
+  <body>
     <div class="position-relative">
         <div class="position-absolute top-50 start-50 translate-middle">
         <iframe width="500" height="360" frameborder="0" src="https://js.adapools.org/widget-dark.html?pool=af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776"><a href="https://adapools.org/pool/af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776">Detail</a></iframe>
