--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>ElektroPool</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="position-relative">
         <div class="position-absolute top-50 start-50 translate-middle">
         <iframe width="500" height="360" frameborder="0" src="https://js.adapools.org/widget-dark.html?pool=af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776"><a href="https://adapools.org/pool/af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776">Detail</a></iframe>
