--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 
     <title>ElektroPool</title>
   </head>
-  <body class="bg-dark">
-    <div class="position-relative">
+  <body class="bg-dark position-relative">
+
         <div class="position-absolute top-50 start-50 translate-middle">
-        <iframe width="500" height="360" frameborder="0" src="https://js.adapools.org/widget-dark.html?pool=af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776"><a href="https://adapools.org/pool/af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776">Detail</a></iframe>
+          <iframe width="500" height="360" frameborder="0" src="https://js.adapools.org/widget-dark.html?pool=af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776"><a href="https://adapools.org/pool/af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776">Detail</a></iframe>
         </div>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
