--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <title>ElektroPool</title>
   </head>
-  <body class="bg-dark position-relative">
+  <body class="bg-dark">
 
-        <div class="position-absolute top-50 start-50 translate-middle">
+        <div class="d-flex flex-row justify-content-center alig-items-center"">
           <iframe width="500" height="360" frameborder="0" src="https://js.adapools.org/widget-dark.html?pool=af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776"><a href="https://adapools.org/pool/af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776">Detail</a></iframe>
         </div>
 
