--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-dark">
 
-        <div class="d-flex flex-row justify-content-center alig-items-center"">
+        <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
           <iframe width="500" height="360" frameborder="0" src="https://js.adapools.org/widget-dark.html?pool=af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776"><a href="https://adapools.org/pool/af708c8531084ad908bc9bad58c8fc50ab5a1ac76bdc65252e59d776">Detail</a></iframe>
         </div>
 
